# logroller

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: compare_compression.rs  daily_utc.rs  error_logs.rs  logger.rs  rapid_compression.rs  sized_with_permissions.rs  template_filename.rs  tracing.rs
src/: lib.rs
