[package]
name = "logroller"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
thiserror = "1.0"
flate2 = "1.0"
regex = "1"
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tracing = "0.1"
tracing-appender = "0.2"

[features]
default = ["tracing"]
tracing = ["dep:tracing-subscriber"]
